@startuml
class AccountType {
- String typeCode
- String name
- BalanceSheetComponentEnum balanceSheetEntry
- BigDecimal minimumBalance
- String notes
- Set<AccountTransactionType> applicableFromTransactionTypes
- Set<AccountTransactionType> applicableToTransactionTypes
- Set<AccountOwnerType> applicableForAccountOwnerTypes
}

class AccountHistory {
- Long id
- String transactionType
- BigDecimal balance
- LocalDateTime transactionDate
- String description
- CashAccount account
}


class AccountTransactionType {
- String typeCode
- String name
- String notes
- Set<AccountType> applicableFromAccountTypes
- Set<AccountType> applicableToAccountTypes
}

class CashAccount {
- Long id
- String title
- BigDecimal balance
- LocalDateTime lastTransactionDate
- String notes
- List<AccountHistory> accountHistories
- AccountOwner accountOwner
- AccountType accountType
}


class AccountOwner {
- Long id
- String firstName
- String lastName
- String email
- String phoneNumber
- String notes
- AccountOwnerType type
}


class AccountOwnerType {
- String typeCode
- String name
- String notes
- Boolean self
- IndividualGroupEnum individualOrGroup
}

class AccountTransaction {
- Long id
- BigDecimal transactionAmount
- String transactionType
- LocalDateTime transactionDate
- String notes
- AccountTransactionType type
- CashAccount fromAccount
- CashAccount toAccount
}

AccountType ||..|{ AccountTransactionType :(join table) applicable for from* & to*
AccountType ||..|{ AccountOwnerType :(join table) applicable for

AccountOwnerType ||..|{ AccountOwner
AccountTransactionType ||..|{ AccountTransaction

CashAccount ||..|{ AccountType
CashAccount ||..|{ AccountHistory
CashAccount ||..|{ AccountTransaction

@enduml